src/objects/LBI__APISettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>LBI__Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field stores the count for batch retry mechanism</description>
        <inlineHelpText>This field stores the count for the batch retry mechanism</inlineHelpText>
        <label>Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__MaximumPagesPerBatchPull__c</fullName>
        <description>This setting governs how many total pages to generate in API data retrieval jobs.  9000 is a good number and stays under the 10k DML limit.  Edit if you want less for some reason, or if SFDC changes the governor.</description>
        <label>Maximum Pages Per Batch Pull</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__RetryCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RetryCount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__TimeoutSeconds__c</fullName>
        <label>Timeout Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Global API Settings</label>
</CustomObject>